# OpenMP

./: standart.txt
OpenMP_1/: CMakeLists.txt  main.c  sole.c
OpenMP_1/matrix/: column.c  column.h  matrix.c  matrix.h  scaning.c
OpenMP_2/: CMakeLists.txt  main.c  sole.c  sole.h
OpenMP_2/matrix/: column.c  column.h  matrix.c  scaning.h
OpenMP_3/: CMakeLists.txt  main.c  sole.c
OpenMP_3/matrix/: column.c  column.h  matrix.c
